Fix cursor on mobile

--- a/styles/custom-cursor.module.css
+++ b/styles/custom-cursor.module.css
@@ -10,3 +10,9 @@
   z-index: 9999;
   transform: translate(-50%, -50%);
 }
+
+@media (hover: none) and (pointer: coarse) {
+  .cursor {
+    display: none;
+  }
+}
